Noticias - Halloween Theme

--- a/ntchalloween/ntcbats.html
+++ b/ntchalloween/ntcbats.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
 <meta charset="UTF-8">
-<title>Bats - Halloween by:Rob</title>
+<title>Bats - Halloween</title>
 <link rel="stylesheet" type="text/css" href="Bats_Rob.css">
   
 <script>
@@ -269,18 +269,6 @@
     </div>
   </div>
   
-        <div class="batBody batPart">
-        <svg><use xlink:href="#batBody"></svg>
-        <div class="batWing batPart floating">
-          <svg><use xlink:href="#batWing"></svg>
-          <div class="batWingTip batPart">
-            <svg><use xlink:href="#batWingTip"></svg>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  
   <div class="batWrapper">
     <div class="bat">
       <div class="batBody batBody--left batPart">
@@ -306,6 +294,30 @@
   
   
   <div class="batWrapper">
+    <div class="bat">
+      <div class="batBody batBody--left batPart">
+        <svg><use xlink:href="#batBody"></svg>
+        <div class="batWing batPart floating">
+          <svg><use xlink:href="#batWing"></svg>
+          <div class="batWingTip batPart">
+            <svg><use xlink:href="#batWingTip"></svg>
+          </div>
+        </div>
+      </div>
+      <div class="batBody batPart">
+        <svg><use xlink:href="#batBody"></svg>
+        <div class="batWing batPart floating">
+          <svg><use xlink:href="#batWing"></svg>
+          <div class="batWingTip batPart">
+            <svg><use xlink:href="#batWingTip"></svg>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  
+    <div class="batWrapper">
     <div class="bat">
       <div class="batBody batBody--left batPart">
         <svg><use xlink:href="#batBody"></svg>
