--- a/thestore1/tsneon.html
+++ b/thestore1/tsneon.html
@@ -17,8 +17,8 @@ body {
 .container {
   position: absolute;
   top: 25vh;
-  left: 5vh;
-  background-image:url(SIGNTS.png);
+  left: 3vh;
+  background-image:url(THP.png);
 }
 	
 @keyframes flicker {
@@ -43,8 +43,8 @@ body {
 <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
 <div class="container">
 <div id="neonsign">
-<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="400px"
-	 height="420px" viewBox="0 0 400 420" enable-background="new 0 0 400 420" xml:space="preserve">
+<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="246px"
+	 height="392px" viewBox="0 0 246 392" enable-background="new 0 0 246 392" xml:space="preserve">
 <g id="SIGNCUADROS">
 	<path fill="#FF454F" d="M72.4,111.4c0-0.2-0.1-0.3-0.1-0.5c-0.1-0.2-0.2-0.6-0.3-1l-23.1-1.2L30.2,49.5L52.1,48
 		c0-0.2-0.1-0.3-0.1-0.5c-0.2-0.5-0.3-1-0.5-1.5l-22.7,1.5l-1.3,0.1l19.9,63l25.1,1.3C72.5,111.7,72.4,111.6,72.4,111.4z"/>
