--- a/thestore1/tsneon.html
+++ b/thestore1/tsneon.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- /*  Made by: Robert Ferrari  */  -->
+<!-- /*  Made by: Robert Ferrari RobFerrari (129030692)  */  -->
 <html lang="en">
 <head>
 <meta charset="UTF-8"> 
@@ -18,7 +18,7 @@ body {
   position: absolute;
   top: 25vh;
   left: 3vh;
-  background-image:url(THP.png);
+  background-image:url(THC.png);
 }
 	
 @keyframes flicker {
@@ -33,7 +33,7 @@ body {
   100%  { opacity: 1; }
 }
 
-  #SIGNCUADROS { animation: flicker 7s infinite step-end; }
+  #SIGNCUADRO { animation: flicker 7s infinite step-end; }
   #FLECHAS { animation: flicker 6s infinite 2s step-end; }
 	
 </style>
@@ -43,33 +43,34 @@ body {
 <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
 <div class="container">
 <div id="neonsign">
-<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="246px"
-	 height="392px" viewBox="0 0 246 392" enable-background="new 0 0 246 392" xml:space="preserve">
-<g id="SIGNCUADROS">
-	<path fill="#FF454F" d="M72.4,111.4c0-0.2-0.1-0.3-0.1-0.5c-0.1-0.2-0.2-0.6-0.3-1l-23.1-1.2L30.2,49.5L52.1,48
-		c0-0.2-0.1-0.3-0.1-0.5c-0.2-0.5-0.3-1-0.5-1.5l-22.7,1.5l-1.3,0.1l19.9,63l25.1,1.3C72.5,111.7,72.4,111.6,72.4,111.4z"/>
-	<path fill="#FF454F" d="M236.3,33.6c6.1,0.2,12.1,0.5,18.2,0.8l82.1-5.5c0.1-0.2,0.3-0.3,0.4-0.4c0.9-0.7,1.8-1.3,2.7-1.8
-		L236.3,33.6z"/>
-	<path fill="#FF454F" d="M361.4,62.2c0.6,0.4,1.1,0.8,1.7,1.2l13-39.2L350,26c-0.3,0.7-0.6,1.5-0.8,2l24.1-1.6L361.4,62.2z"/>
-	<path fill="#FF454F" d="M360.2,65.8l-19.1,57.5l-25.3-1.3c0,0.2-0.1,0.4-0.1,0.6c0,0.1-0.2,0.7-0.3,1.4l26.4,1.3l0.8,0l19.8-59.5
-		C361.6,65.9,360.9,65.9,360.2,65.8z"/>
-	<path fill="#EA00FF" d="M331.1,64.5l-12.3,46.8L82.4,119L55.7,35.4l258.6,8.4c0.4-0.8,1.1-1.5,2-1.9L54.3,33.4l-1.4,0L81,121
-		l238.7-7.7l0.7,0l12.8-48.7C332.5,64.6,331.8,64.5,331.1,64.5z"/>
+<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="245px"
+	 height="390px" viewBox="0 0 245 390" enable-background="new 0 0 245 390" xml:space="preserve">
+<g id="SIGNCUADRO">
+	<path fill="#FF454F" stroke="#FF454F" stroke-width="0.5" stroke-miterlimit="10" d="M34.8,73.4c0-0.1-0.1-0.2-0.1-0.3
+		c0-0.2-0.1-0.4-0.2-0.7l-15.6-0.8L6.3,31.9l14.8-1c0-0.1,0-0.2-0.1-0.3c-0.1-0.3-0.2-0.7-0.3-1l-15.3,1l-0.9,0.1l13.4,42.2l17,0.8
+		C34.9,73.6,34.8,73.5,34.8,73.4z"/>
+	<path fill="#FF454F" stroke="#FF454F" stroke-width="0.5" stroke-miterlimit="10" d="M145.8,21.2c4.1,0.2,8.2,0.3,12.3,0.5
+		l55.6-3.7c0.1-0.1,0.2-0.2,0.3-0.3c0.6-0.5,1.2-0.9,1.8-1.2L145.8,21.2z"/>
+	<path fill="#FF454F" stroke="#FF454F" stroke-width="0.5" stroke-miterlimit="10" d="M230.5,40.6c0.4,0.3,0.8,0.5,1.1,0.8l8.8-26.5
+		L222.8,16c-0.2,0.5-0.4,1-0.5,1.4l16.3-1.1L230.5,40.6z"/>
+	<path fill="#FF454F" d="M229.6,43L216.7,82l-17.1-0.9c0,0.1-0.1,0.3-0.1,0.4c0,0.1-0.1,0.5-0.2,0.9l17.9,0.9l0.5,0L231,43.1
+		C230.6,43.1,230.1,43.1,229.6,43z"/>
+	<path fill="#EA00FF" stroke="#EA00FF" stroke-width="0.75" stroke-miterlimit="10" d="M210,42l-8.3,31.5L41.6,78.7L23.5,22.4
+		l175.1,5.6c0.3-0.5,0.7-1,1.3-1.3L22.6,21.1l-1,0l19,59.1l161.6-5.2l0.5,0l8.6-32.8C210.9,42.1,210.4,42,210,42z"/>
 </g>
 <g id="FLECHAS">
 	<g>
-		<path fill="#FF454F" d="M175.1,31.7c0.9,0,1.5,0,1.7,0.1c0.7,0,5.9,0.2,12.1,0.4l51.4-6.4l-8.1,8c1,0,1.9,0.1,2.9,0.1l11.2-11
-			L175.1,31.7z"/>
+		<path fill="#FF454F" d="M104.3,19.9c0.6,0,1,0,1.2,0c0.5,0,4,0.1,8.2,0.3l34.8-4.3l-5.5,5.4c0.7,0,1.3,0.1,2,0.1l7.6-7.4
+			L104.3,19.9z"/>
 	</g>
 	<g>
-		<path fill="#FF454F" d="M92.9,119.4l1.2,0.7c1.3-0.1,2.6-0.1,3.8-0.2l-1-0.6C95.6,119.3,94.2,119.3,92.9,119.4z"/>
-		<path fill="#FF454F" d="M162.4,126.1c-0.2-0.8-0.4-1.5-0.6-2.3L108,170.1l7.1-39.8l-7.7-4.7c-1.2,0-2.5,0.1-3.9,0.1l9.3,5.6
-			l-7.9,44.2L162.4,126.1z"/>
+		<path fill="#FF454F" d="M95.8,83.9c-0.1-0.5-0.3-1-0.4-1.6l-36.4,31.3l4.8-26.9l-5.2-3.2c-0.8,0-1.7,0.1-2.7,0.1l6.3,3.8l-5.4,30
+			L95.8,83.9z"/>
 	</g>
 	<g>
 		<g>
-			<path fill="#FFAA00" d="M353.7,15.8l-9.8,32.7l22.7,17.6l-80.5-4.6L353.7,15.8z M361.5,64.2L342,49.1l8.8-29.4L291,60.2
-				L361.5,64.2z"/>
+			<path fill="#FFAA00" stroke="#FFAA00" stroke-width="0.25" stroke-miterlimit="10" d="M225.3,9.1l-6.7,22.2L234,43.2l-54.5-3.1
+				L225.3,9.1z M230.5,41.9l-13.2-10.2l6-19.9l-40.5,27.4L230.5,41.9z"/>
 		</g>
 	</g>
 </g>
