--- a/thestore1/tsneon.html
+++ b/thestore1/tsneon.html
@@ -11,7 +11,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  background: url('OUTERTS.png')/*Wallpaper*/ center/cover fixed, #000
+  background: url('OUTERTS2.png')/*Wallpaper*/ center/cover fixed, #000
 }
 
 .container {
