--- a/aiuto/aiutoneon.html
+++ b/aiuto/aiutoneon.html
@@ -120,7 +120,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  background: url('OAIUTO.png')/*Wallpaper*/ center/cover fixed, #000
+  background: url('https://i.imgur.com/lFrgnOa.png')/*Wallpaper*/ center/cover fixed, #000
 }
 
 ::-webkit-scrollbar {  
@@ -131,7 +131,7 @@ body {
   position: absolute;
   top: 25vh;
   left: 12vh;
-  background-image:url(AC.png);
+  background-image:url(https://i.imgur.com/5U6NxU1.png);
 }
 	
 @keyframes flicker {
