Xat Aiuto - Neon Theme

--- a/aiuto/aiutoneon.html
+++ b/aiuto/aiutoneon.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- /*  Made by: Robert Ferrari RobFerrari (129030692)  */ -->
+<!-- /*  Made by: Robert Ferrari RobFerrari (129030692)  */  -->
 <html lang="en">
 <head>
 <meta charset="UTF-8"> 
@@ -120,7 +120,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  background: url('https://i.imgur.com/lFrgnOa.png')/*Wallpaper*/ center/cover fixed, #000
+  background: url('OAIUTO.png')/*Wallpaper*/ center/cover fixed, #000
 }
 
 ::-webkit-scrollbar {  
@@ -131,7 +131,7 @@ body {
   position: absolute;
   top: 25vh;
   left: 12vh;
-  background-image:url(https://i.imgur.com/5U6NxU1.png);
+  background-image:url(AC.png);
 }
 	
 @keyframes flicker {
