Xat Aiuto - Neon Theme

--- a/aiuto/aiutoneon.html
+++ b/aiuto/aiutoneon.html
@@ -36,7 +36,7 @@
   -webkit-background-clip: text;  
   -webkit-text-fill-color: transparent;
   opacity: 0;
-  transition: all, 550ms;
+  transition: all, 800ms;
   -moz-filter: blurunquote("(25px)");
   -ms-filter: blurunquote("(25px)");
   filter: blurunquote("(25px)");
@@ -101,10 +101,10 @@
   transition-delay: 400ms;
 }
 .text-anim span:nth-child(3) {
-  transition-delay: 300ms;
+  transition-delay: 10s;
 }
 .text-anim span:nth-child(2) {
-  transition-delay: 200ms;
+  transition-delay: 5s;
 }
 .text-anim span:nth-child(1) {
   transition-delay: 100ms;
@@ -255,16 +255,10 @@ body {
 </head>
 <body>
 <div class="text-anim">
-<span>• Visita il nostro</span>
-<span>blog ufficiale</span><br>
-<span>xat-aiuto.com per guide,</span><br>
-<span>notizie e strumenti su xat.</span><br><br>
-<span>• Nessun volontario/amministratore</span><br>
-<span>ti scriverà in privato per dirti che il tuo </span><br>
-<span>account è stato segnalato o bloccato.</span><br><br>
-<span>• Ricordati di non condividere le</span><br>
-<span>tue informazioni personali, password</span><br>
-<span>o posizione con qualcun altro.</span><br><br>
+<span>• Visita il nostro blog ufficiale<br>xat-aiuto.com per guide,<br>notizie e strumenti su xat.<br><br></span>
+<span>• Nessun volontario/amministratore<br>ti scriverà in privato per dirti che il tuo<br>account è stato segnalato o bloccato.<br><br> </span>
+<span>• Ricordati di non condividere le<br>tue informazioni personali, password<br>o posizione con qualcun altro.</span>
+
 
 <script id="rendered-js" >
 /*Sample code to run animation continuously every 2 seconds*/
