--- a/assistance/paris/eiffel.html
+++ b/assistance/paris/eiffel.html
@@ -26,8 +26,8 @@ body {
 
 .container {
   position: absolute;
-  top: 25vh;
-  left: 3vh;
+  top: 15vh;
+  left: -15px;
   background-image:url(TIMG.png);
 }
 	
