--- a/assistance/angelfalls/falls.html
+++ b/assistance/angelfalls/falls.html
@@ -22,7 +22,7 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-  background: url('VBG.png')/*Wallpaper*/ center/cover fixed, #000
+  background: url('VBG.jpg')/*Wallpaper*/ center/cover fixed, #000
 }
 
 .fog {
