--- a/bau/rb.html
+++ b/bau/rb.html
@@ -11,6 +11,29 @@
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <meta name="author" content="Robert - xat.com/DiverZone">
 <style>
+#notes {
+  height: calc(100vh + 100px);
+  overflow: hidden;
+  position: relative;
+  top: -100px;
+}
+
+
+#all{
+  overflow: hidden;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+}
+
+
+a:hover{
+  color: #fff;
+  letter-spacing: 2px;
+  transition: all 0.5s ease-in-out;
+}
+
+
 body {
   position: relative;
   width: 100%;
@@ -26,10 +49,11 @@ body {
 
 .container {
   position: absolute;
-  top: 25vh;
+  top: 39vh;
   left: 1vh;
   background-image:url(CRB.png);
 }
+
 	
 @keyframes flicker {
   0%    { opacity: 1; }
@@ -62,6 +86,10 @@ body {
 
 
 </style>
+
+<div id="all">
+<div id="notes">
+<div id="animate">
 </head>
 <body translate="no">
 <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
@@ -254,9 +282,14 @@ body {
 </g>
 </svg>
 
+</div>
+</div>
 
 </div>
 </div>
+</div>
+
+<script src="therbn.js"></script>>
 
 </body>
 </html>
