--- a/ocean/opblue/op.html
+++ b/ocean/opblue/op.html
@@ -33,7 +33,7 @@ html, body {
   right: 10px;
   padding: 10px;
   background: rgba(255, 255, 255, 0.2);
-  font-family: Futura;
+  font-family: Futura Bold;
   font-size: 10px;
   color: #31a7d9;
   border-radius: 50px;
