--- a/ocean/opblue/op.html
+++ b/ocean/opblue/op.html
@@ -11,6 +11,7 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <meta name="author" content="Robert - xat.com/DiverZone">
+<link rel="stylesheet" type="text/css" href="fonts.css">
 <style>
 
 ::-webkit-scrollbar {  
