--- a/ocean/opblue/op.html
+++ b/ocean/opblue/op.html
@@ -11,8 +11,9 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <meta name="author" content="Robert - xat.com/DiverZone">
-<link rel="stylesheet" type="text/css" href="fonts.css">
 <style>
+
+@import url('http://fonts.cdnfonts.com/css/mont');
 
 ::-webkit-scrollbar {  
     display: none;
@@ -34,7 +35,8 @@ html, body {
   right: 10px;
   padding: 10px;
   background: rgba(255, 255, 255, 0.2);
-  font-family: OratorStd;;
+  font-family: 'Mont', sans-serif;
+  font-weight: 900;
   font-size: 10px;
   color: #31a7d9;
   border-radius: 50px;
