--- a/thestore1/tsneon.html
+++ b/thestore1/tsneon.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- /*  Made by: Robert Ferrari RobFerrari (129030692)  */  -->
+<!-- /*  Made by: Robert XROB (129030692)  */  -->
 <html lang="en">
 <head>
 <meta charset="UTF-8"> 
@@ -17,7 +17,7 @@ body {
 .container {
   position: absolute;
   top: 22vh;
-  left: 3vh;
+  left: 10vh;
   background-image:url(THC.png);
 }
 	
@@ -83,3 +83,4 @@ body {
 
 </body>
 </html>
+
